--- a/src/createUser.module.css
+++ b/src/createUser.module.css
@@ -1,8 +1,80 @@
 .container {
+  height: 100vh;
   display: flex;
+  margin: 1px;
 }
 
+.loginBox {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.contextBox {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 60%;
+  background-color: #c5cae9;
+  margin: 10px;
+}
+
+.center {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.picture {
+  width: 600px;
+  height: 410px;
+  border-radius: 15px;
+  margin-bottom: 30px;
+}
+.text {
+  font-size: 25px;
+  font-weight: bolder;
+  width: 60%;
+  margin: 30px 0px;
+}
 .img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
+}
+
+.footer {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 15px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input {
+  width: 300px;
+  height: 50px;
+  border-style: none;
+  background-color: gainsboro;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.button {
+  width: 300px;
+  height: 50px;
+  border-style: none;
+  background-color: black;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.button:hover {
+  opacity: 0.8;
 }
